fix: solve text overflow on books issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,9 +64,14 @@ a {
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   min-width: 300px;
-  height: 220px;
+  min-height: 220px;
   padding: 10px;
   text-align: center;
+}
+
+.book__title, .book__author {
+  overflow-wrap: break-word;
+  max-width: 300px;
 }
 
 .book__read {
